# MBU_Formulardata_Modersmaal_ATS

./: main.py  pyproject.toml
helpers/: config.py  helper_functions.py
processes/: finalize_process.py  process_item.py  queue_handler.py
